# taigi-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  TASKS.md  main.py  pyproject.toml
backend/: .env.example  .gitignore  api.py  config.py  e2e_test.py  probe_llm.py  pyproject.toml  telemetry.py
backend/agent/: context.py  diagnostics.py  error.py  llm_client.py  loop.py  prompt.py  router.py  session.py  telemetry.py  tool_dispatch.py  tools.py
backend/api/: __init__.py  admin.py  asr.py  chat.py  client_events.py  departures.py  moovo.py  route_plans.py  session_store.py  tts.py  voice.py
backend/otp/: README.md  docker-compose.yml
backend/pipeline/: normalize.py  text_processor.py  tts_normalizer.py
backend/providers/: __init__.py  bus.py  ebus.py  http.py  hybrid.py  moovo.py  otp.py  tdx_bus.py  yunlin_ebus.py
backend/scripts/: probe_llm.py  update_yunlin_gtfs.py
backend/services/: __init__.py  departures.py  kiosk_config.py  moovo.py  route_plans.py  stop_catalog.py  yunlin_boundary.py
backend/services/departures/: __init__.py  classification.py  normalize.py  provider.py  renderers.py  snapshot.py
backend/telemetry/: README.md
backend/tests/: conftest.py  test_agent_context.py  test_agent_session.py  test_agent_tools.py  test_api.py  test_asr.py  test_config.py  test_kiosk_departures.py  test_kiosk_route_planner.py  test_stop_catalog.py  test_telemetry.py
backend/tests/agent/: test_context.py  test_router.py  test_session.py
backend/tests/api/: test_api.py  test_asr.py  test_chat_concurrent.py  test_chat_extra_tools.py  test_chat_stream.py  (+3 more)
backend/tools/: intent_rules.py  kiosk_bus.py  kiosk_departures.py  kiosk_route_planner.py  moovo.py  otp.py  stop_catalog.py  yunlin_boundary.py  yunlin_ebus.py
backend/voice/: __init__.py  agent_processor.py  pipeline.py  stt_breeze.py  tts_taigi.py
(+177 files in other folders)
