[project]
name = "taigi-bus-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "tiktoken>=0.13.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "pyright>=1.1",
    "pytest>=8.0",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
