[project]
name = "taigi-bus-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.0",
    "openai>=1.0.0",
    "python-multipart>=0.0.20",
    "opentelemetry-exporter-otlp-proto-http>=1.38.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-instrumentation-httpx>=0.50b0",
    "opentelemetry-sdk>=1.38.0",
    "polyline>=2.0.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "taibun>=1.1.7",
    "taigi-converter",
    "tiktoken>=0.13.0",
    "uvicorn>=0.47.0",
    "opencc-python-reimplemented>=0.1.7",
]

[tool.uv.sources]
taigi-converter = { git = "https://github.com/Yizhe0407/HanloFlow.git", branch = "feat/optimization-dictionary" }

[dependency-groups]
dev = [
    "ruff>=0.9",
    "pyright>=1.1",
    "pytest>=8.0",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
pythonpath = ["."]
